--- a/Assignment 2/todo.txt
+++ b/Assignment 2/todo.txt
@@ -1,5 +1,3 @@
 TODO
 
-- Destroy out of bounds shot
-- Add delay after final base is destroyed
-- Add mouse interaction to spawn missiles
+- Add mouse movement interaction
